# MIS-BakerPTAS

./: CMakeLists.txt  README.md  Untitled-1.cpp
MIS-BakerPTAS/examples/: disconnected6.txt  run_planarity_tests.sh
MIS-BakerPTAS/include/: exact_mis.hpp  graph.hpp  io.hpp  planarity.hpp
MIS-BakerPTAS/src/: independent_set.cpp
examples/: graph_with_invalid_vertex.txt  graph_with_loop.txt  run_exact_tests.sh  run_manual_tests.sh  set_invalid.txt
include/: independent_set.hpp
src/: exact_mis.cpp  graph.cpp  io.cpp  main.cpp  planarity.cpp
